moreutils (0.48) UNRELEASED; urgency=low

  * Allow overriding PREFIX and CFLAGS to make the build more flexible
    (Thanks, Ben Walton)
  * Typo. Closes: #697113
  * ts: -i enables incremental timestamping.
    Thanks, Thomas Vander Stichele
  * ts: Support single-digit day dates.
    Thanks, Peter Lunicks

 -- Joey Hess <joeyh@debian.org>  Wed, 25 Jul 2012 23:39:34 -0400

moreutils (0.47) unstable; urgency=low

  * errno: New utility that looks up errno numbers or names.

 -- Joey Hess <joeyh@debian.org>  Mon, 25 Jun 2012 16:31:17 -0400

moreutils (0.46) unstable; urgency=low

  * Typo. Closes: #649158
  * combine: Avoid reading files twice, to support data coming from
    pipes. Closes: #667960 Thanks, Carsten Hey

 -- Joey Hess <joeyh@debian.org>  Mon, 09 Apr 2012 16:19:34 -0400

moreutils (0.45) unstable; urgency=low

  * ts: Support %.s for seconds sinch epoch with subsecond resolution.
    Closes: #619764

 -- Joey Hess <joeyh@debian.org>  Sun, 19 Jun 2011 15:44:28 -0400

moreutils (0.44) unstable; urgency=low

  * pee: Propigate exit status of commands run.

 -- Joey Hess <joeyh@debian.org>  Thu, 10 Mar 2011 17:38:14 -0400

moreutils (0.43) unstable; urgency=low

  * chronic: New command, runs a command quietly, unless it fails.
  * Now depends on IPC::Run, used by chronic.

 -- Joey Hess <joeyh@debian.org>  Fri, 29 Oct 2010 15:54:37 -0400

moreutils (0.42) unstable; urgency=low

  * sponge: Guarantee that output file is always updated atomically,
    by renaming a temp file into place. Closes: #592144
  * sponge: Ensure that output file permissions are always preserved
    if it already exists.
  * Typo. Closes: #596032

 -- Joey Hess <joeyh@debian.org>  Wed, 06 Oct 2010 20:03:25 -0400

moreutils (0.41) unstable; urgency=low

  * ifdata.docbook: Mark interface as required in synopsis. Closes: #588397
  * Add missing AUTHOR section to docbook man pages.
  * sponge: Correct bad use of fread that caused a trailing quantity of